--- a/config/samples/wva-experiments/analyze-capacity-based.ipynb
+++ b/config/samples/wva-experiments/analyze-capacity-based.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 1,
    "id": "9a193625",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "id": "c4655064",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "id": "416864aa",
    "metadata": {},
    "outputs": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "id": "ae72a7d4",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 5,
    "id": "c3296d66",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 6,
    "id": "00a916a0",
    "metadata": {},
    "outputs": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 7,
    "id": "85a19e36",
    "metadata": {},
    "outputs": [
@@ -695,7 +695,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
+   "id": "e837c95d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse arrival rate from logs\n",
+    "arrival_rate_data = []\n",
+    "\n",
+    "print(\"Parsing arrival rate from logs...\")\n",
+    "with open(LOG_FILE, 'r') as f:\n",
+    "    for line in f:\n",
+    "        try:\n",
+    "            log = json.loads(line.strip())\n",
+    "            msg = log.get('msg', '')\n",
+    "            \n",
+    "            # Look for \"Metrics collected for VA\" messages with arrivalRate\n",
+    "            if 'Metrics collected for VA' in msg and 'arrivalRate=' in msg:\n",
+    "                ts = log.get('ts', '')\n",
+    "                try:\n",
+    "                    dt = datetime.fromisoformat(ts.replace('Z', '+00:00'))\n",
+    "                except:\n",
+    "                    continue\n",
+    "                \n",
+    "                # Extract arrivalRate using regex\n",
+    "                arrival_match = re.search(r'arrivalRate=([0-9.]+)', msg)\n",
+    "                if arrival_match:\n",
+    "                    arrival_rate = float(arrival_match.group(1))\n",
+    "                    arrival_rate_data.append({\n",
+    "                        'timestamp': dt,\n",
+    "                        'arrival_rate': arrival_rate\n",
+    "                    })\n",
+    "        except (json.JSONDecodeError, KeyError, ValueError):\n",
+    "            continue\n",
+    "\n",
+    "df_arrival = pd.DataFrame(arrival_rate_data)\n",
+    "\n",
+    "if len(df_arrival) > 0:\n",
+    "    # Convert to relative time in minutes\n",
+    "    df_arrival['time_min'] = (df_arrival['timestamp'] - df_arrival['timestamp'].min()).dt.total_seconds() / 60\n",
+    "    print(f\"✓ Parsed {len(df_arrival)} arrival rate data points\")\n",
+    "    print(f\"  Arrival rate range: {df_arrival['arrival_rate'].min():.2f} - {df_arrival['arrival_rate'].max():.2f} req/s\")\n",
+    "else:\n",
+    "    print(\"⚠ No arrival rate data found in logs\")\n",
+    "\n",
+    "df_arrival.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a635fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot arrival rate over time\n",
+    "if len(df_arrival) > 0:\n",
+    "    fig, ax = plt.subplots(figsize=(14, 5))\n",
+    "    \n",
+    "    # Plot arrival rate\n",
+    "    ax.plot(df_arrival['time_min'], df_arrival['arrival_rate'], \n",
+    "            color='purple', linewidth=2, label='Arrival Rate (req/s)')\n",
+    "    ax.fill_between(df_arrival['time_min'], 0, df_arrival['arrival_rate'], \n",
+    "                     color='purple', alpha=0.1)\n",
+    "    \n",
+    "    ax.set_xlabel('Time (minutes)', fontsize=12)\n",
+    "    ax.set_ylabel('Arrival Rate (req/s)', fontsize=12, color='purple')\n",
+    "    ax.tick_params(axis='y', labelcolor='purple')\n",
+    "    ax.grid(True, alpha=0.3)\n",
+    "    ax.legend(loc='upper left', fontsize=10)\n",
+    "    \n",
+    "    plt.title('Request Arrival Rate Over Time', fontsize=14, fontweight='bold')\n",
+    "    plt.tight_layout()\n",
+    "    \n",
+    "    # Save plot\n",
+    "    output_file = plots_dir / 'arrival_rate.png'\n",
+    "    plt.savefig(output_file, dpi=150, bbox_inches='tight')\n",
+    "    print(f\"✓ Saved arrival rate plot to {output_file}\")\n",
+    "    \n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"⚠ No arrival rate data to plot\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "26226bd8",
+   "metadata": {},
+   "source": [
+    "## 6.1 Arrival Rate (Load) Over Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "93389870",
    "metadata": {},
    "outputs": [
@@ -772,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": null,
    "id": "9d8249b5",
    "metadata": {},
    "outputs": [
@@ -857,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "id": "ae49ca5b",
    "metadata": {},
    "outputs": [
@@ -911,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": null,
    "id": "09a6b2cb",
    "metadata": {},
    "outputs": [
@@ -980,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": null,
    "id": "031b821e",
    "metadata": {},
    "outputs": [
@@ -1062,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "id": "a6bb6082",
    "metadata": {},
    "outputs": [
@@ -1149,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "08d242c6",
    "metadata": {},
    "outputs": [
@@ -1463,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": null,
    "id": "407de9ef",
    "metadata": {},
    "outputs": [
@@ -2814,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "id": "8819b2e7",
    "metadata": {},
    "outputs": [
@@ -2890,7 +2983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "id": "44d3dfc8",
    "metadata": {},
    "outputs": [
