modified script to collect logs, added experiments

--- a/config/samples/wva-experiments/analyze-model-based.ipynb
+++ b/config/samples/wva-experiments/analyze-model-based.ipynb
@@ -139,6 +139,9 @@
     "EXPERIMENT_DIR = Path('./experiment-data/model-based-high-parallel-20251209-101938')  # High load example (not bad)\n",
     "EXPERIMENT_DIR = Path('./experiment-data/model-based-high-parallel-20251209-105715')  # High load \n",
     "\n",
+    "# From here on, EXPERIMENT_DIR contains logs from the Jobs too to analyze their benchmark results\n",
+    "\n",
+    "\n",
     "\n",
     "LOG_FILE = EXPERIMENT_DIR / 'wva-controller-logs.jsonl'\n",
     "METRICS_CSV = EXPERIMENT_DIR / 'metrics.csv'\n",
@@ -1225,6 +1228,160 @@
     "    plt.show()\n",
     "else:\n",
     "    print(\"No aligned data available for plotting\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b367f326",
+   "metadata": {},
+   "source": [
+    "## 6. Benchmark Results Analysis\n",
+    "\n",
+    "Parse vLLM benchmark results from job logs to analyze end-user performance metrics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb9466ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def parse_benchmark_results(job_logs_dir):\n",
+    "    \"\"\"\n",
+    "    Parse vLLM benchmark results from job log files.\n",
+    "    \n",
+    "    Returns a DataFrame with columns:\n",
+    "    - job_name: Name of the job\n",
+    "    - successful_requests: Number of successful requests\n",
+    "    - failed_requests: Number of failed requests\n",
+    "    - mean_ttft_ms: Mean Time to First Token (ms)\n",
+    "    - mean_itl_ms: Mean Inter-Token Latency (ms)\n",
+    "    - mean_tpot_ms: Mean Time Per Output Token (ms)\n",
+    "    - p99_ttft_ms: P99 Time to First Token (ms)\n",
+    "    - p99_itl_ms: P99 Inter-Token Latency (ms)\n",
+    "    - p99_tpot_ms: P99 Time Per Output Token (ms)\n",
+    "    - throughput_req_s: Throughput in requests per second\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    results = []\n",
+    "    \n",
+    "    # Check if job-logs directory exists\n",
+    "    if not job_logs_dir.exists():\n",
+    "        print(f\"⚠ Job logs directory not found: {job_logs_dir}\")\n",
+    "        return pd.DataFrame()\n",
+    "    \n",
+    "    # Process each log file\n",
+    "    for log_file in job_logs_dir.glob('*.log'):\n",
+    "        job_name = log_file.stem  # Filename without extension\n",
+    "        \n",
+    "        try:\n",
+    "            content = log_file.read_text()\n",
+    "            \n",
+    "            # Extract successful and failed requests\n",
+    "            successful_match = re.search(r'Successful requests:\\s+(\\d+)', content)\n",
+    "            failed_match = re.search(r'Failed requests:\\s+(\\d+)', content)\n",
+    "            \n",
+    "            # Extract TTFT metrics\n",
+    "            ttft_mean_match = re.search(r'Mean TTFT \\(ms\\):\\s+([0-9.]+)', content)\n",
+    "            ttft_p99_match = re.search(r'P99 TTFT \\(ms\\):\\s+([0-9.]+)', content)\n",
+    "            \n",
+    "            # Extract ITL metrics\n",
+    "            itl_mean_match = re.search(r'Mean ITL \\(ms\\):\\s+([0-9.]+)', content)\n",
+    "            itl_p99_match = re.search(r'P99 ITL \\(ms\\):\\s+([0-9.]+)', content)\n",
+    "            \n",
+    "            # Extract TPOT metrics\n",
+    "            tpot_mean_match = re.search(r'Mean TPOT \\(ms\\):\\s+([0-9.]+)', content)\n",
+    "            tpot_p99_match = re.search(r'P99 TPOT \\(ms\\):\\s+([0-9.]+)', content)\n",
+    "            \n",
+    "            # Extract throughput\n",
+    "            throughput_match = re.search(r'Throughput:\\s+([0-9.]+)\\s+requests/s', content)\n",
+    "            \n",
+    "            # Only add results if we found at least request counts\n",
+    "            if successful_match or failed_match:\n",
+    "                results.append({\n",
+    "                    'job_name': job_name,\n",
+    "                    'successful_requests': int(successful_match.group(1)) if successful_match else 0,\n",
+    "                    'failed_requests': int(failed_match.group(1)) if failed_match else 0,\n",
+    "                    'mean_ttft_ms': float(ttft_mean_match.group(1)) if ttft_mean_match else None,\n",
+    "                    'mean_itl_ms': float(itl_mean_match.group(1)) if itl_mean_match else None,\n",
+    "                    'mean_tpot_ms': float(tpot_mean_match.group(1)) if tpot_mean_match else None,\n",
+    "                    'p99_ttft_ms': float(ttft_p99_match.group(1)) if ttft_p99_match else None,\n",
+    "                    'p99_itl_ms': float(itl_p99_match.group(1)) if itl_p99_match else None,\n",
+    "                    'p99_tpot_ms': float(tpot_p99_match.group(1)) if tpot_p99_match else None,\n",
+    "                    'throughput_req_s': float(throughput_match.group(1)) if throughput_match else None\n",
+    "                })\n",
+    "        except Exception as e:\n",
+    "            print(f\"⚠ Error parsing {log_file.name}: {e}\")\n",
+    "            continue\n",
+    "    \n",
+    "    return pd.DataFrame(results)\n",
+    "\n",
+    "# Parse benchmark results from job logs\n",
+    "job_logs_dir = EXPERIMENT_DIR / 'job-logs'\n",
+    "df_benchmark = parse_benchmark_results(job_logs_dir)\n",
+    "\n",
+    "if len(df_benchmark) > 0:\n",
+    "    print(f\"\\n{'='*80}\")\n",
+    "    print(f\"BENCHMARK RESULTS SUMMARY\")\n",
+    "    print(f\"{'='*80}\\n\")\n",
+    "    \n",
+    "    # Total requests across all jobs\n",
+    "    total_successful = df_benchmark['successful_requests'].sum()\n",
+    "    total_failed = df_benchmark['failed_requests'].sum()\n",
+    "    total_requests = total_successful + total_failed\n",
+    "    \n",
+    "    print(f\"📊 Request Statistics (Total across {len(df_benchmark)} jobs):\")\n",
+    "    print(f\"   • Successful requests: {total_successful:,}\")\n",
+    "    print(f\"   • Failed requests: {total_failed:,}\")\n",
+    "    print(f\"   • Total requests: {total_requests:,}\")\n",
+    "    if total_requests > 0:\n",
+    "        print(f\"   • Success rate: {(total_successful / total_requests * 100):.2f}%\")\n",
+    "    \n",
+    "    # Mean metrics across jobs (only for jobs with valid data)\n",
+    "    print(f\"\\n📈 Performance Metrics (Mean across jobs):\")\n",
+    "    \n",
+    "    if df_benchmark['mean_ttft_ms'].notna().any():\n",
+    "        mean_ttft = df_benchmark['mean_ttft_ms'].mean()\n",
+    "        print(f\"   • Mean TTFT: {mean_ttft:.2f} ms\")\n",
+    "    \n",
+    "    if df_benchmark['mean_itl_ms'].notna().any():\n",
+    "        mean_itl = df_benchmark['mean_itl_ms'].mean()\n",
+    "        print(f\"   • Mean ITL: {mean_itl:.2f} ms\")\n",
+    "    \n",
+    "    if df_benchmark['mean_tpot_ms'].notna().any():\n",
+    "        mean_tpot = df_benchmark['mean_tpot_ms'].mean()\n",
+    "        print(f\"   • Mean TPOT: {mean_tpot:.2f} ms\")\n",
+    "    \n",
+    "    print(f\"\\n📊 P99 Latencies (Mean across jobs):\")\n",
+    "    \n",
+    "    if df_benchmark['p99_ttft_ms'].notna().any():\n",
+    "        p99_ttft = df_benchmark['p99_ttft_ms'].mean()\n",
+    "        print(f\"   • P99 TTFT: {p99_ttft:.2f} ms\")\n",
+    "    \n",
+    "    if df_benchmark['p99_itl_ms'].notna().any():\n",
+    "        p99_itl = df_benchmark['p99_itl_ms'].mean()\n",
+    "        print(f\"   • P99 ITL: {p99_itl:.2f} ms\")\n",
+    "    \n",
+    "    if df_benchmark['p99_tpot_ms'].notna().any():\n",
+    "        p99_tpot = df_benchmark['p99_tpot_ms'].mean()\n",
+    "        print(f\"   • P99 TPOT: {p99_tpot:.2f} ms\")\n",
+    "    \n",
+    "    if df_benchmark['throughput_req_s'].notna().any():\n",
+    "        mean_throughput = df_benchmark['throughput_req_s'].mean()\n",
+    "        print(f\"\\n⚡ Throughput (Mean across jobs): {mean_throughput:.2f} requests/s\")\n",
+    "    \n",
+    "    print(f\"\\n{'='*80}\\n\")\n",
+    "    \n",
+    "    # Display per-job breakdown\n",
+    "    print(\"Per-Job Breakdown:\")\n",
+    "    display(df_benchmark)\n",
+    "else:\n",
+    "    print(f\"⚠ No benchmark results found in {job_logs_dir}\")\n",
+    "    print(\"   Make sure job logs were collected during the experiment.\")"
    ]
   },
   {
