--- a/thesis/hack/wva_analysis.ipynb
+++ b/thesis/hack/wva_analysis.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "id": "e5d981cf",
    "metadata": {},
    "outputs": [
@@ -36,12 +36,12 @@
      "output_type": "stream",
      "text": [
       "✅ Configuration loaded\n",
-      "   Experiment: 20251209_124534\n",
-      "   Experiment directory: experiments/20251209_124534_ttft_queuescorer_logs\n",
+      "   Experiment: 20251209_141622\n",
+      "   Experiment directory: experiments/20251209_141622_ttft_queuescorer_logs\n",
       "   Log file: ./txt_logs/ttft_queuescorer_logs.txt\n",
       "   Extract script: ./extract_metrics.sh\n",
       "   Target accelerator: H100\n",
-      "   Output CSV: experiments/20251209_124534_ttft_queuescorer_logs/extracted_metrics.csv\n"
+      "   Output CSV: experiments/20251209_141622_ttft_queuescorer_logs/extracted_metrics.csv\n"
      ]
     }
    ],
@@ -62,7 +62,9 @@
     "\n",
     "# Configuration\n",
     "LOG_DIR = f'./txt_logs'\n",
-    "LOG_NAME = 'ttft_queuescorer_SLO_10_10_24'  # Change this to your log name\n",
+    "# LOG_NAME = 'ttft_queuescorer_SLO_10_10_24'  # Change this to your log name\n",
+    "LOG_NAME = 'ttft_queuescorer_logs'  # Change this to your log name\n",
+    "\n",
     "LOG_FILE = f'{LOG_DIR}/{LOG_NAME}.txt'  # Change this to your log file\n",
     "EXTRACT_SCRIPT = './extract_metrics.sh'\n",
     "TARGET_ACCELERATOR = 'H100'  # Accelerator to extract tuner params from (H100, L40S, A100, etc.)\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 133,
    "id": "bd56f0c6",
    "metadata": {},
    "outputs": [
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 134,
    "id": "2912cb61",
    "metadata": {},
    "outputs": [
@@ -164,7 +166,7 @@
      "text": [
       "📊 Extracting metrics from ./txt_logs/ttft_queuescorer_logs.txt...\n",
       "   Targeting accelerator: H100\n",
-      "✅ Metrics extracted to experiments/20251209_124534_ttft_queuescorer_logs/extracted_metrics.csv\n",
+      "✅ Metrics extracted to experiments/20251209_141622_ttft_queuescorer_logs/extracted_metrics.csv\n",
       "   Lines extracted: 69\n",
       "\n",
       "📋 Preview of extracted data:\n",
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 135,
    "id": "f8a8f818",
    "metadata": {},
    "outputs": [
@@ -249,7 +251,7 @@
       "   5: {\"level\":\"WARN\",\"ts\":\"2025-10-20T16:24:09.878Z\",\"msg\":\"TLS certificate verification is disabled - th...\n",
       "\n",
       "2. CSV output check:\n",
-      "   ✓ File exists: experiments/20251209_124534_ttft_queuescorer_logs/extracted_metrics.csv\n",
+      "   ✓ File exists: experiments/20251209_141622_ttft_queuescorer_logs/extracted_metrics.csv\n",
       "   ✓ Size: 7,170 bytes\n",
       "   ✓ Rows: 68\n",
       "   ✓ Columns: ['timestamp', 'itlAverage', 'ttftAverage', 'rate', 'inTk', 'outTk', 'numRep', 'itl', 'ttft', 'slo_itl', 'slo_ttft', 'alpha', 'beta', 'gamma', 'delta']\n",
@@ -350,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 136,
    "id": "776dcb40",
    "metadata": {},
    "outputs": [
@@ -642,7 +644,7 @@
        "19  15.415  0.000337      9.005867  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -709,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 137,
    "id": "77c9b0af",
    "metadata": {},
    "outputs": [
@@ -806,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 138,
    "id": "51783ccd",
    "metadata": {},
    "outputs": [
@@ -824,7 +826,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/itl_analysis.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/itl_analysis.png'\n"
      ]
     }
    ],
@@ -888,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 139,
    "id": "2c66471f",
    "metadata": {},
    "outputs": [
@@ -906,7 +908,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/ttft_analysis.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/ttft_analysis.png'\n"
      ]
     }
    ],
@@ -986,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 140,
    "id": "b0320800",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1006,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/load_pattern.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/load_pattern.png'\n"
      ]
     }
    ],
@@ -1054,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 141,
    "id": "4bf4052e",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1074,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/itl_replicas_timeline.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/itl_replicas_timeline.png'\n"
      ]
     }
    ],
@@ -1127,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 142,
    "id": "722af0a0",
    "metadata": {},
    "outputs": [
@@ -1145,7 +1147,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/ttft_replicas_timeline.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/ttft_replicas_timeline.png'\n"
      ]
     }
    ],
@@ -1208,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 143,
    "id": "88368143",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/combined_itl_ttft.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/combined_itl_ttft.png'\n"
      ]
     }
    ],
@@ -1328,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 144,
    "id": "53a2244c",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1343,7 @@
       "============================================================\n",
       "\n",
       "📊 Experiment Overview:\n",
-      "   Experiment ID: 20251209_124534\n",
+      "   Experiment ID: 20251209_141622\n",
       "   Duration: 33.1 minutes\n",
       "   Data points: 34\n",
       "   Scaling pattern: 1 → 4 replicas\n",
@@ -1404,7 +1406,7 @@
       "\n",
       "============================================================\n",
       "\n",
-      "✅ Summary saved to 'experiments/20251209_124534_ttft_queuescorer_logs/analysis/summary.txt'\n"
+      "✅ Summary saved to 'experiments/20251209_141622_ttft_queuescorer_logs/analysis/summary.txt'\n"
      ]
     }
    ],
@@ -1490,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 145,
    "id": "90c1ff26",
    "metadata": {},
    "outputs": [
@@ -1498,13 +1500,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Processed data exported to 'experiments/20251209_124534_ttft_queuescorer_logs/data/processed_metrics.csv'\n",
-      "✅ Warmup gaps analysis exported to 'experiments/20251209_124534_ttft_queuescorer_logs/analysis/warmup_gaps.csv'\n",
-      "✅ Scaling events exported to 'experiments/20251209_124534_ttft_queuescorer_logs/analysis/scaling_events.csv'\n",
-      "✅ Original log file copied to 'experiments/20251209_124534_ttft_queuescorer_logs/data/original_log.txt'\n",
-      "✅ Manifest created at 'experiments/20251209_124534_ttft_queuescorer_logs/manifest.txt'\n",
+      "✅ Processed data exported to 'experiments/20251209_141622_ttft_queuescorer_logs/data/processed_metrics.csv'\n",
+      "✅ Warmup gaps analysis exported to 'experiments/20251209_141622_ttft_queuescorer_logs/analysis/warmup_gaps.csv'\n",
+      "✅ Scaling events exported to 'experiments/20251209_141622_ttft_queuescorer_logs/analysis/scaling_events.csv'\n",
+      "✅ Original log file copied to 'experiments/20251209_141622_ttft_queuescorer_logs/data/original_log.txt'\n",
+      "✅ Manifest created at 'experiments/20251209_141622_ttft_queuescorer_logs/manifest.txt'\n",
       "\n",
-      "📁 Experiment directory: experiments/20251209_124534_ttft_queuescorer_logs\n",
+      "📁 Experiment directory: experiments/20251209_141622_ttft_queuescorer_logs\n",
       "   All outputs have been organized in subdirectories\n"
      ]
     }
@@ -1565,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 146,
    "id": "2be90cd4",
    "metadata": {},
    "outputs": [
@@ -1835,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 147,
    "id": "94f31612",
    "metadata": {},
    "outputs": [
@@ -1844,13 +1846,13 @@
      "output_type": "stream",
      "text": [
       "======================================================================\n",
-      "EXPERIMENT 20251209_124534 - COMPLETE\n",
+      "EXPERIMENT 20251209_141622 - COMPLETE\n",
       "======================================================================\n",
       "\n",
-      "📁 Experiment Directory: experiments/20251209_124534_ttft_queuescorer_logs\n",
+      "📁 Experiment Directory: experiments/20251209_141622_ttft_queuescorer_logs\n",
       "\n",
       "Directory Structure:\n",
-      "20251209_124534_ttft_queuescorer_logs/\n",
+      "20251209_141622_ttft_queuescorer_logs/\n",
       "  📄 manifest.txt (294 bytes)\n",
       "  📄 extracted_metrics.csv (7,170 bytes)\n",
       "  analysis/\n",
@@ -1894,7 +1896,7 @@
       "   • manifest.txt - Experiment configuration and metadata\n",
       "\n",
       "======================================================================\n",
-      "✅ All outputs saved to: experiments/20251209_124534_ttft_queuescorer_logs\n",
+      "✅ All outputs saved to: experiments/20251209_141622_ttft_queuescorer_logs\n",
       "======================================================================\n"
      ]
     }
@@ -1963,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 148,
    "id": "4c8f2889",
    "metadata": {},
    "outputs": [
@@ -2189,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 149,
    "id": "2c174547",
    "metadata": {},
    "outputs": [
@@ -2207,7 +2209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/calibration_gap_analysis.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/calibration_gap_analysis.png'\n"
      ]
     }
    ],
@@ -2264,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 150,
    "id": "9aaf169f",
    "metadata": {},
    "outputs": [
@@ -2282,7 +2284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/calibration_correlation_analysis.png'\n"
+      "✅ Plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/calibration_correlation_analysis.png'\n"
      ]
     }
    ],
@@ -2345,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 151,
    "id": "867c4579",
    "metadata": {},
    "outputs": [
@@ -2400,7 +2402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 152,
    "id": "3c65b1d1",
    "metadata": {},
    "outputs": [
@@ -2418,7 +2420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Parameter evolution plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/parameter_evolution.png'\n"
+      "✅ Parameter evolution plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/parameter_evolution.png'\n"
      ]
     }
    ],
@@ -2510,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 153,
    "id": "1b5ec8e2",
    "metadata": {},
    "outputs": [
@@ -2528,7 +2530,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Combined parameter evolution plot saved as 'experiments/20251209_124534_ttft_queuescorer_logs/plots/parameter_evolution_combined.png'\n"
+      "✅ Combined parameter evolution plot saved as 'experiments/20251209_141622_ttft_queuescorer_logs/plots/parameter_evolution_combined.png'\n"
      ]
     }
    ],
@@ -2588,7 +2590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 154,
    "id": "6a49e6f8",
    "metadata": {},
    "outputs": [
@@ -2727,7 +2729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 155,
    "id": "2dd99678",
    "metadata": {},
    "outputs": [
@@ -2818,7 +2820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 156,
    "id": "79d2e752",
    "metadata": {},
    "outputs": [
